--- a/curriculo.Rmd
+++ b/curriculo.Rmd
@@ -2,4 +2,4 @@
 title: ""
 ---
 
-<a href="https://github.com/andrea-junqueira/andrea-junqueira.github.io/raw/main/Junqueira_CV.pdf" target="_blank" rel="noopener">CV Donwload</a>
+<a href="https://github.com/hannah-paul/hannah-paul.github.io/raw/main/CV-Paul.pdf" target="_blank" rel="noopener">CV Donwload</a>
